# nautobot-topology-map

./: .dockerignore  .flake8  .gitignore  Dockerfile  PLUGIN_STRUCTURE.md  README.md  dev_data.json  docker-compose.yml  metadata.json  mock_switch.py  nautobot_config.py  package.json  pyproject.toml  tasks.py
.github/workflows/: ci.yml  release.yml
docs/: agent_workflow.md
frontend/: index.html  package-lock.json  package.json  server.ts  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  mockData.ts  types.ts
frontend/src/components/: CableDiscovery.tsx  DeviceFlow.tsx  ErrorBoundary.tsx  SiteTopology.tsx  TopologyMap.tsx
frontend/src/components/__tests__/: CableDiscovery.test.tsx
frontend/src/components/discovery/: DiscoveryControlPanel.tsx  DiscoveryHeader.tsx  DiscoveryResultsTable.tsx  DiscoverySummary.tsx  discoveryMocks.ts
frontend/src/components/topology/: APStackNode.tsx  ActionButtons.tsx  ClusterNode.tsx  ControlPanel.tsx  DeviceNode.tsx  DeviceTooltip.tsx  EdgeTooltip.tsx  GroupNode.tsx  PerformanceHUD.tsx  TopologyEdge.tsx  ZoomControls.tsx
frontend/src/config/: topologyConfig.ts
frontend/src/hooks/: useDiscovery.ts  useTopologyData.test.ts  useTopologyData.ts  useTopologyLayout.ts  useTopologyMetrics.ts
frontend/src/tests/: setup.ts
frontend/src/utils/: topology-utils.test.ts  topology-utils.ts
nautobot_topology/: __init__.py  admin.py  models.py  navigation.py  template_content.py  urls.py  views.py
nautobot_topology/api/: __init__.py  discovery.py  serializers.py  urls.py  views.py
nautobot_topology/migrations/: 0001_initial.py  0002_alter_topologylayout_options.py
nautobot_topology/templates/nautobot_topology/: dashboard.html  discovery.html
nautobot_topology/tests/: test_ap_grouping.py  test_api.py  test_api_frontports.py  test_api_layout.py  test_api_metrics.py  test_api_serializers.py  test_api_views_extra.py  test_cable_discovery.py  test_frontport_bug.py  test_permissions.py  test_views.py  test_views_dashboard.py
nautobot_topology/tests/integration/: benchmark_api.py  stress_test_10k.py
tests/: test_plugin.py
