[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nautobot-topology"
version = "1.1.0"
description = "Nautobot Topology Visualization Plugin"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Joakim Nyden", email = "joakim.nyden@gmail.com" },
]
keywords = ["nautobot", "nautobot-plugin", "topology", "visualization", "network"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]
dependencies = [
    "nautobot>=3.0.0,<3.1.0",
    "django-rest-framework",
    "django-filter",
    "drf-spectacular",
    "networkx>=3.0",
    "pydantic>=2.0",
    "factory-boy",
    "nautobot-bgp-models>=3.1.1",
    "netmiko>=4.0.0",
    "ntc-templates>=3.0.0",
    "requests",
]

[project.optional-dependencies]
dev = [
    "invoke",
    "black",
    "flake8",
    "pylint",
    "pylint-django",
    "yamllint",
    "bandit",
]
test = [
    "pytest",
    "pytest-django",
    "pytest-cov",
]

[project.entry-points."nautobot_plugins"]
nautobot_topology = "nautobot_topology:config"

[tool.hatch.build]
include = [
    "nautobot_topology",
]

[tool.hatch.build.targets.wheel]
packages = ["nautobot_topology"]

[tool.hatch.build.targets.sdist]
include = [
    "nautobot_topology",
]

[tool.black]
line-length = 120
target-version = ['py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["nautobot_topology/tests", "tests"]
DJANGO_SETTINGS_MODULE = "nautobot_config"
python_files = ["test_*.py", "*_test.py"]
addopts = "-v"

[tool.pylint.master]
load-plugins = "pylint_django"
django-settings-module = "nautobot.core.settings"

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "invalid-name",
]
